--- a/notebooks/p_classifier.ipynb
+++ b/notebooks/p_classifier.ipynb
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -233,9 +233,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'train': {'label': PosixPath('/cluster/scratch/thobauma/dl_data/ori_data/train/correct_labels.txt'),\n",
+       "  'images': PosixPath('/cluster/scratch/mmathys/dl_data/adversarial_data/cw/train/images')},\n",
+       " 'val': {'label': PosixPath('/cluster/scratch/thobauma/dl_data/ori_data/validation/correct_labels.txt'),\n",
+       "  'images': PosixPath('/cluster/scratch/mmathys/dl_data/adversarial_data/cw/validation/images')}}"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "datasets_paths['cw']['b']"
    ]
@@ -250,9 +264,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "class LinearClassifier(nn.Module):\n",
+    "    \"\"\"Linear layer to train on top of frozen features\"\"\"\n",
+    "    def __init__(self, dim, num_labels=1000):\n",
+    "        super(LinearClassifier, self).__init__()\n",
+    "        self.num_labels = num_labels\n",
+    "        self.linear = nn.Linear(dim, num_labels)\n",
+    "        self.linear.weight.data.normal_(mean=0.0, std=0.01)\n",
+    "        self.linear.bias.data.zero_()\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        # flatten\n",
+    "        x = x.view(x.size(0), -1)\n",
+    "\n",
+    "        # linear layer\n",
+    "        return self.linear(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Please use the `--pretrained_weights` argument to indicate the path of the checkpoint to evaluate.\n",
+      "Since no pretrained weights have been provided, we load the reference pretrained DINO weights.\n",
+      "Model vit_small built.\n",
+      "Embed dim 1536\n",
+      "We load the reference pretrained linear weights.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<All keys matched successfully>"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "model, linear_classifier = get_dino()\n",
     "\n",
@@ -264,9 +323,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "LabelEncoder()"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from sklearn import preprocessing\n",
     "\n",
