--- a/notebooks/posthoc_train.ipynb
+++ b/notebooks/posthoc_train.ipynb
@@ -290,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -358,7 +358,84 @@
       "Epoch: [2]  [120/249]  eta: 0:02:43  lr: 0.000250  loss: 0.007858 (0.009695)  time: 1.302306  data: 1.301152  max mem: 2\n",
       "Epoch: [2]  [140/249]  eta: 0:02:18  lr: 0.000250  loss: 0.008138 (0.009607)  time: 1.318025  data: 1.316886  max mem: 2\n",
       "Epoch: [2]  [160/249]  eta: 0:01:54  lr: 0.000250  loss: 0.007567 (0.009367)  time: 1.342586  data: 1.341403  max mem: 2\n",
-      "Epoch: [2]  [180/249]  eta: 0:01:29  lr: 0.000250  loss: 0.008334 (0.009385)  time: 1.382292  data: 1.381079  max mem: 2\n"
+      "Epoch: [2]  [180/249]  eta: 0:01:29  lr: 0.000250  loss: 0.008334 (0.009385)  time: 1.382292  data: 1.381079  max mem: 2\n",
+      "Epoch: [2]  [200/249]  eta: 0:01:03  lr: 0.000250  loss: 0.005706 (0.009078)  time: 1.333598  data: 1.332420  max mem: 2\n",
+      "Epoch: [2]  [220/249]  eta: 0:00:37  lr: 0.000250  loss: 0.006856 (0.009096)  time: 1.358069  data: 1.356909  max mem: 2\n",
+      "Epoch: [2]  [240/249]  eta: 0:00:11  lr: 0.000250  loss: 0.007520 (0.008991)  time: 1.360884  data: 1.359683  max mem: 2\n",
+      "Epoch: [2]  [248/249]  eta: 0:00:01  lr: 0.000250  loss: 0.007539 (0.009112)  time: 1.356979  data: 1.355777  max mem: 2\n",
+      "Epoch: [2] Total time: 0:05:25 (1.308145 s / it)\n",
+      "Averaged stats: lr: 0.000250  loss: 0.007539 (0.009112)\n",
+      "Test:  [ 0/10]  eta: 0:00:13  loss: 0.009779 (0.009779)  acc1: 100.000000 (100.000000)  time: 1.367503  data: 1.366798  max mem: 2\n",
+      "Test:  [ 9/10]  eta: 0:00:01  loss: 0.004002 (0.005706)  acc1: 100.000000 (99.960000)  time: 1.333521  data: 1.332824  max mem: 2\n",
+      "Test: Total time: 0:00:13 (1.333661 s / it)\n",
+      "* Acc@1 99.960 loss 0.006\n",
+      "Accuracy at epoch 2 of the network on the 10 test images: 100.0%\n",
+      "Max accuracy so far: 99.96%\n",
+      "Training of the supervised linear classifier on frozen features completed.\n",
+      "Top-1 test accuracy: 100.0\n",
+      "fgsm_06\n",
+      "Epoch: [0]  [  0/217]  eta: 0:04:58  lr: 0.001000  loss: 2.500248 (2.500248)  time: 1.373489  data: 1.372405  max mem: 2\n",
+      "Epoch: [0]  [ 20/217]  eta: 0:04:20  lr: 0.001000  loss: 0.151941 (0.340396)  time: 1.322086  data: 1.320954  max mem: 2\n",
+      "Epoch: [0]  [ 40/217]  eta: 0:03:53  lr: 0.001000  loss: 0.068632 (0.206786)  time: 1.308094  data: 1.306959  max mem: 2\n",
+      "Epoch: [0]  [ 60/217]  eta: 0:03:26  lr: 0.001000  loss: 0.038145 (0.153047)  time: 1.317237  data: 1.316074  max mem: 2\n",
+      "Epoch: [0]  [ 80/217]  eta: 0:03:00  lr: 0.001000  loss: 0.029678 (0.122781)  time: 1.313966  data: 1.312813  max mem: 2\n",
+      "Epoch: [0]  [100/217]  eta: 0:02:34  lr: 0.001000  loss: 0.029055 (0.104443)  time: 1.342657  data: 1.341490  max mem: 2\n",
+      "Epoch: [0]  [120/217]  eta: 0:02:08  lr: 0.001000  loss: 0.021040 (0.090818)  time: 1.356150  data: 1.354994  max mem: 2\n",
+      "Epoch: [0]  [140/217]  eta: 0:01:42  lr: 0.001000  loss: 0.014870 (0.080760)  time: 1.323766  data: 1.322580  max mem: 2\n",
+      "Epoch: [0]  [160/217]  eta: 0:01:15  lr: 0.001000  loss: 0.014310 (0.072923)  time: 1.352417  data: 1.351248  max mem: 2\n",
+      "Epoch: [0]  [180/217]  eta: 0:00:49  lr: 0.001000  loss: 0.011999 (0.066526)  time: 1.334893  data: 1.333762  max mem: 2\n",
+      "Epoch: [0]  [200/217]  eta: 0:00:22  lr: 0.001000  loss: 0.011053 (0.061099)  time: 1.347984  data: 1.346851  max mem: 2\n",
+      "Epoch: [0]  [216/217]  eta: 0:00:01  lr: 0.001000  loss: 0.010478 (0.057510)  time: 1.328817  data: 1.327665  max mem: 2\n",
+      "Epoch: [0] Total time: 0:04:48 (1.330555 s / it)\n",
+      "Averaged stats: lr: 0.001000  loss: 0.010478 (0.057510)\n",
+      "Test:  [ 0/10]  eta: 0:00:13  loss: 0.008056 (0.008056)  acc1: 100.000000 (100.000000)  time: 1.362036  data: 1.361349  max mem: 2\n",
+      "Test:  [ 9/10]  eta: 0:00:01  loss: 0.008056 (0.011915)  acc1: 99.609375 (99.600000)  time: 1.300502  data: 1.299787  max mem: 2\n",
+      "Test: Total time: 0:00:13 (1.300683 s / it)\n",
+      "* Acc@1 99.600 loss 0.012\n",
+      "Accuracy at epoch 0 of the network on the 10 test images: 99.6%\n",
+      "Max accuracy so far: 99.60%\n",
+      "Epoch: [1]  [  0/217]  eta: 0:04:06  lr: 0.000750  loss: 0.007483 (0.007483)  time: 1.136621  data: 1.135262  max mem: 2\n",
+      "Epoch: [1]  [ 20/217]  eta: 0:03:54  lr: 0.000750  loss: 0.009648 (0.011978)  time: 1.194239  data: 1.192985  max mem: 2\n",
+      "Epoch: [1]  [ 40/217]  eta: 0:03:32  lr: 0.000750  loss: 0.010825 (0.011782)  time: 1.212854  data: 1.211720  max mem: 2\n",
+      "Epoch: [1]  [ 60/217]  eta: 0:03:11  lr: 0.000750  loss: 0.008019 (0.011235)  time: 1.260490  data: 1.259362  max mem: 2\n",
+      "Epoch: [1]  [ 80/217]  eta: 0:02:49  lr: 0.000750  loss: 0.009563 (0.011358)  time: 1.287660  data: 1.286524  max mem: 2\n",
+      "Epoch: [1]  [100/217]  eta: 0:02:26  lr: 0.000750  loss: 0.008864 (0.011022)  time: 1.305512  data: 1.304361  max mem: 2\n",
+      "Epoch: [1]  [120/217]  eta: 0:02:02  lr: 0.000750  loss: 0.006681 (0.010643)  time: 1.318250  data: 1.317092  max mem: 2\n",
+      "Epoch: [1]  [140/217]  eta: 0:01:37  lr: 0.000750  loss: 0.008655 (0.010723)  time: 1.327946  data: 1.326813  max mem: 2\n",
+      "Epoch: [1]  [160/217]  eta: 0:01:12  lr: 0.000750  loss: 0.007562 (0.010835)  time: 1.332077  data: 1.330942  max mem: 2\n",
+      "Epoch: [1]  [180/217]  eta: 0:00:47  lr: 0.000750  loss: 0.005558 (0.010501)  time: 1.313949  data: 1.312843  max mem: 2\n",
+      "Epoch: [1]  [200/217]  eta: 0:00:21  lr: 0.000750  loss: 0.006957 (0.010272)  time: 1.328199  data: 1.327091  max mem: 2\n",
+      "Epoch: [1]  [216/217]  eta: 0:00:01  lr: 0.000750  loss: 0.007868 (0.010225)  time: 1.244806  data: 1.243710  max mem: 2\n",
+      "Epoch: [1] Total time: 0:04:38 (1.283235 s / it)\n",
+      "Averaged stats: lr: 0.000750  loss: 0.007868 (0.010225)\n",
+      "Test:  [ 0/10]  eta: 0:00:16  loss: 0.005355 (0.005355)  acc1: 100.000000 (100.000000)  time: 1.611313  data: 1.610609  max mem: 2\n",
+      "Test:  [ 9/10]  eta: 0:00:01  loss: 0.005501 (0.008275)  acc1: 100.000000 (99.840000)  time: 1.274865  data: 1.274199  max mem: 2\n",
+      "Test: Total time: 0:00:12 (1.275002 s / it)\n",
+      "* Acc@1 99.840 loss 0.008\n",
+      "Accuracy at epoch 1 of the network on the 10 test images: 99.8%\n",
+      "Max accuracy so far: 99.84%\n",
+      "Epoch: [2]  [  0/217]  eta: 0:03:58  lr: 0.000250  loss: 0.006494 (0.006494)  time: 1.099895  data: 1.098883  max mem: 2\n",
+      "Epoch: [2]  [ 20/217]  eta: 0:03:51  lr: 0.000250  loss: 0.006698 (0.008448)  time: 1.181369  data: 1.180233  max mem: 2\n",
+      "Epoch: [2]  [ 40/217]  eta: 0:03:30  lr: 0.000250  loss: 0.006565 (0.008564)  time: 1.202682  data: 1.201527  max mem: 2\n",
+      "Epoch: [2]  [ 60/217]  eta: 0:03:08  lr: 0.000250  loss: 0.005580 (0.008105)  time: 1.230673  data: 1.229540  max mem: 2\n",
+      "Epoch: [2]  [ 80/217]  eta: 0:02:45  lr: 0.000250  loss: 0.006827 (0.008239)  time: 1.237174  data: 1.236029  max mem: 2\n",
+      "Epoch: [2]  [100/217]  eta: 0:02:22  lr: 0.000250  loss: 0.005715 (0.008020)  time: 1.259828  data: 1.258682  max mem: 2\n",
+      "Epoch: [2]  [120/217]  eta: 0:01:59  lr: 0.000250  loss: 0.006243 (0.007931)  time: 1.296909  data: 1.295744  max mem: 2\n",
+      "Epoch: [2]  [140/217]  eta: 0:01:35  lr: 0.000250  loss: 0.005352 (0.008238)  time: 1.308293  data: 1.307147  max mem: 2\n",
+      "Epoch: [2]  [160/217]  eta: 0:01:11  lr: 0.000250  loss: 0.006942 (0.008306)  time: 1.327783  data: 1.326630  max mem: 2\n",
+      "Epoch: [2]  [180/217]  eta: 0:00:46  lr: 0.000250  loss: 0.005089 (0.008172)  time: 1.303548  data: 1.302378  max mem: 2\n",
+      "Epoch: [2]  [200/217]  eta: 0:00:21  lr: 0.000250  loss: 0.005596 (0.008048)  time: 1.335521  data: 1.334366  max mem: 2\n",
+      "Epoch: [2]  [216/217]  eta: 0:00:01  lr: 0.000250  loss: 0.006498 (0.007944)  time: 1.290930  data: 1.289800  max mem: 2\n",
+      "Epoch: [2] Total time: 0:04:35 (1.268829 s / it)\n",
+      "Averaged stats: lr: 0.000250  loss: 0.006498 (0.007944)\n",
+      "Test:  [ 0/10]  eta: 0:00:13  loss: 0.004404 (0.004404)  acc1: 100.000000 (100.000000)  time: 1.357685  data: 1.356967  max mem: 2\n",
+      "Test:  [ 9/10]  eta: 0:00:01  loss: 0.004573 (0.007523)  acc1: 100.000000 (99.840000)  time: 1.292574  data: 1.291870  max mem: 2\n",
+      "Test: Total time: 0:00:12 (1.292719 s / it)\n",
+      "* Acc@1 99.840 loss 0.008\n",
+      "Accuracy at epoch 2 of the network on the 10 test images: 99.8%\n",
+      "Max accuracy so far: 99.84%\n",
+      "Training of the supervised linear classifier on frozen features completed.\n",
+      "Top-1 test accuracy: 99.8\n"
      ]
     }
    ],
