--- a/notebooks/old/p_classifier.ipynb
+++ b/notebooks/old/p_classifier.ipynb
@@ -370,7 +370,12 @@
     "        data_set = AdvTrainingImageDataset(ds_b[tv]['images'], ds_b[tv]['label'], transform, class_subset=CLASS_SUBSET, label_encoder=label_encoder)\n",
     "        data_loader = DataLoader(data_set, batch_size=BATCH_SIZE, num_workers=NUM_WORKERS, pin_memory=PIN_MEMORY, shuffle=False)\n",
     "        print(f'''{ds}: {tv} {len(data_set)}''')\n",
-    "        logger_dict[ds][tv] = validate_network(model, linear_classifier, data_loader, adversarial_attack=None, tensor_dir=ds_p[tv]['images'], path_predictions=ds_p[tv]['label'])"
+    "        logger_dict[ds][tv] = validate_network(model, \n",
+    "                                               linear_classifier, \n",
+    "                                               data_loader, \n",
+    "                                               adversarial_attack=None, \n",
+    "                                               tensor_dir=ds_p[tv]['images'], \n",
+    "                                               path_predictions=ds_p[tv]['label'])"
    ]
   },
   {
