p classifier training: fixed paths

--- a/notebooks/p_classifier_train.ipynb
+++ b/notebooks/p_classifier_train.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +80,7 @@
     "for adv_ds in ADV_DATASETS:\n",
     "    DATA_PATHS = create_paths(data_name=adv_ds,\n",
     "                 datasets_paths=DATA_PATHS,  \n",
-    "                 initial_base_path=DATA_PATH, \n",
+    "                 initial_base_path=BASE_ADV_PATH, \n",
     "                 posthoc_base_path=BASE_POSTHOC_PATH, \n",
     "                 train_str='train', \n",
     "                 val_str='validation')"
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,24 +139,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def train_posthoc_classifier(adv_datasets, dataset_paths):\n",
+    "def train_posthoc_classifier(adv_datasets, dataset_paths, epochs=EPOCHS):\n",
     "    logger_dict = {}\n",
     "    for ds in adv_datasets:\n",
     "        ds_p = dataset_paths[ds]['posthoc']\n",
     "        print(\"#\"*50 + f''' training linear classifier for {ds} ''' + \"#\"*50)\n",
     "        # loaders\n",
-    "        print(f'''original images: {dataset_paths['ori']['posthoc']['train']['images']}''')\n",
-    "        print(f'''adversarial images: {ds_p['train']['images']}''')\n",
-    "        train_set = PosthocTrainDataset(dataset_paths['ori']['posthoc']['train']['images'],ds_p['train']['images'], train_dfs[ds])\n",
+    "        ori_train = dataset_paths['ori']['posthoc']['train']['images']\n",
+    "        adv_train = ds_p['train']['images']\n",
+    "        print(f'''original images: {ori_train}''')\n",
+    "        print(f'''adversarial images: {adv_train}''')\n",
+    "        train_set = PosthocTrainDataset(ori_train, adv_train, train_dfs[ds])\n",
     "        train_loader = DataLoader(train_set, batch_size=BATCH_SIZE, num_workers=NUM_WORKERS, pin_memory=PIN_MEMORY, shuffle=True)\n",
     "        \n",
-    "        print(f'''original images: {dataset_paths['ori']['posthoc']['validation']['images']}''')\n",
-    "        print(f'''adversarial images: {ds_p['validation']['images']}''')\n",
-    "        val_set = PosthocTrainDataset(dataset_paths['ori']['posthoc']['validation']['images'],ds_p['validation']['images'], val_dfs[ds])\n",
+    "        \n",
+    "        ori_validation = dataset_paths['ori']['posthoc']['validation']['images']\n",
+    "        adv_validation = ds_p['validation']['images']\n",
+    "        print(f'''original images: {ori_validation}''')\n",
+    "        print(f'''adversarial images: {adv_validation}''')\n",
+    "        val_set = PosthocTrainDataset(ori_validation, adv_validation, val_dfs[ds])\n",
     "        val_loader = DataLoader(val_set, batch_size=BATCH_SIZE, num_workers=NUM_WORKERS, pin_memory=PIN_MEMORY, shuffle=False)\n",
     "\n",
     "        print(f'''train samples: {len(train_set)} ''')\n",
@@ -176,7 +181,7 @@
     "                                optimizer=optimizer, \n",
     "                                criterion=criterion, \n",
     "                                adversarial_attack=None, \n",
-    "                                epochs=EPOCHS, \n",
+    "                                epochs=epochs, \n",
     "                                val_freq=1, \n",
     "                                batch_size=16,  \n",
     "                                lr=0.001, \n",
@@ -190,34 +195,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "################################################## training linear classifier for cw ##################################################\n",
-      "original images: /cluster/scratch/mmathys/dl_data/posthoc_dev/ori/train/images\n",
-      "adversarial images: /cluster/scratch/mmathys/dl_data/posthoc_dev/cw/train/images\n",
-      "original images: /cluster/scratch/mmathys/dl_data/posthoc_dev/ori/validation/images\n",
-      "adversarial images: /cluster/scratch/mmathys/dl_data/posthoc_dev/cw/validation/images\n",
-      "train samples: 126 \n",
-      "val samples: 128 \n",
-      "\n",
-      "Found checkpoint at /cluster/scratch/mmathys/dl_data/posthoc_models_dev/cw/checkpoint.pth.tar\n",
-      "=> loaded 'state_dict' from checkpoint '/cluster/scratch/mmathys/dl_data/posthoc_models_dev/cw/checkpoint.pth.tar' with msg <All keys matched successfully>\n",
-      "=> loaded 'optimizer' from checkpoint: '/cluster/scratch/mmathys/dl_data/posthoc_models_dev/cw/checkpoint.pth.tar'\n",
-      "=> loaded 'scheduler' from checkpoint: '/cluster/scratch/mmathys/dl_data/posthoc_models_dev/cw/checkpoint.pth.tar'\n",
-      "Training of the supervised linear classifier on frozen features completed.\n",
-      "Top-1 test accuracy: 53.9\n",
-      "\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "loggers = train_posthoc_classifier(['cw'], DATA_PATHS)"
+    "loggers = train_posthoc_classifier(['cw'], DATA_PATHS, 5)"
    ]
   },
   {
