--- a/notebooks/AdversarialBenchmark.ipynb
+++ b/notebooks/AdversarialBenchmark.ipynb
@@ -4,12 +4,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Install, Paths and Parameters"
+    "# Adversarial Benchmarking\n",
+    "\n",
+    "This notebook includes the code to benchmark supervised and unsupervised ViTs against different adversarial attacks."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Install, Paths and Parameters"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,6 +32,7 @@
     "from tqdm import tqdm\n",
     "import random\n",
     "import sys\n",
+    "from torch.utils.data import DataLoader\n",
     "\n",
     "# allow imports when running script from within project dir\n",
     "[sys.path.append(i) for i in ['.', '..']]\n",
@@ -30,8 +40,8 @@
     "# local\n",
     "from src.helpers.helpers import get_random_indexes, get_random_classes\n",
     "from src.model.dino_model import get_dino, ViTWrapper\n",
-    "from src.model.data import create_loader\n",
-    "from src.model.eval import validate_network\n",
+    "from src.model.train import validate_network\n",
+    "from src.model.data import *\n",
     "\n",
     "# Custom imports\n",
     "import torchattacks\n",
@@ -48,31 +58,29 @@
     "username = getpass.getuser()\n",
     "DATA_PATH = Path('/','cluster', 'scratch', 'thobauma', 'dl_data')\n",
     "\n",
-    "DN_PATH = Path(DATA_PATH, 'damageNet')\n",
-    "DN_LABEL_PATH = Path(DN_PATH, 'val_damagenet.txt')\n",
-    "DN_IMAGES_PATH = Path(DN_PATH, 'images')\n",
-    "\n",
-    "ORI_PATH = Path(DATA_PATH, 'ori_data/validation')\n",
+    "ORI_PATH = Path(DATA_PATH, 'ori/validation')\n",
     "ORI_LABEL_PATH = Path(ORI_PATH,'correct_labels.txt')\n",
     "ORI_IMAGES_PATH = Path(ORI_PATH,'images')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "INDEX_SUBSET = get_random_indexes(n_samples=3000)\n",
+    "INDEX_SUBSET = get_random_indexes(n_samples=3000) # Randomly sample data\n",
     "\n",
     "BATCH_SIZE = 30\n",
+    "NUM_WORKERS= 0\n",
+    "PIN_MEMORY=True\n",
     "\n",
     "DEVICE = 'cuda'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -81,22 +89,13 @@
        "3000"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "len(INDEX_SUBSET)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#!python ../setup/collect_env.py"
    ]
   },
   {
@@ -117,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -145,23 +144,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "3000"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "org_loader = create_loader(ORI_IMAGES_PATH, ORI_LABEL_PATH, INDEX_SUBSET, None, BATCH_SIZE, remove_normalization=True)\n",
-    "len(org_loader.dataset)"
+    "org_dataset = ImageDataset(ORI_IMAGES_PATH, ORI_LABEL_PATH, ORIGINAL_TRANSFORM, class_subset=None, index_subset=INDEX_SUBSET)\n",
+    "org_loader = DataLoader(org_dataset, batch_size=BATCH_SIZE, num_workers=NUM_WORKERS, pin_memory=PIN_MEMORY, shuffle=True)"
    ]
   },
   {
@@ -173,37 +161,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
-    "model_wrap = ViTWrapper(model, linear_classifier, DEVICE, n_last_blocks=1, avgpool_patchtokens=True)\n",
-    "model_wrap= model_wrap.to(DEVICE)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Attack model"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "attacks = [\n",
-    "    #FGSM(model_wrap, eps=0.003),\n",
-    "    #FGSM(model_wrap, eps=0.03),\n",
-    "    #FGSM(model_wrap, eps=0.06),\n",
-    "    PGD(model_wrap, eps=0.003, alpha=0.003, steps=20),\n",
-    "    #PGD(model_wrap, eps=0.03, alpha=0.003, steps=20),\n",
-    "    #PGD(model_wrap, eps=0.06, alpha=0.003, steps=20),\n",
-    "    CW(model_wrap, c=10, lr=0.003, steps=30),\n",
-    "    #CW(model_wrap, c=50, lr=0.003, steps=30),\n",
-    "]"
+    "#### ViT/B-16\n",
+    "model_wrap = ViTWrapper(model, linear_classifier, device=DEVICE, n_last_blocks=1, avgpool_patchtokens=True)\n",
+    "model_wrap= model_wrap.to(DEVICE)\n",
+    "\n",
+    "#### ViT/S-16\n",
+    "#model_wrap = ViTWrapper(model, linear_classifier, device=DEVICE, n_last_blocks=4, avgpool_patchtokens=False)\n",
+    "#model_wrap= model_wrap.to(DEVICE)"
    ]
   },
   {
@@ -212,26 +180,26 @@
     "tags": []
    },
    "source": [
-    "#### Compute clean accuracy"
+    "## Compute clean accuracy"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 50/50 [00:52<00:00,  1.05s/it]"
+      "100%|██████████| 100/100 [00:48<00:00,  2.04it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Total elapsed time (sec): 52.37\n",
+      "Total elapsed time (sec): 48.93\n",
       "Clean accuracy: 78.87 %\n"
      ]
     },
@@ -265,11 +233,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
     "torch.cuda.empty_cache()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Attack model\n",
+    "We use TorchAttack library. See: https://github.com/Harry24k/adversarial-attacks-pytorch"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define attacks to be tested\n",
+    "\n",
+    "attacks = [\n",
+    "    #FGSM(model_wrap, eps=0.003),\n",
+    "    #FGSM(model_wrap, eps=0.03),\n",
+    "    #FGSM(model_wrap, eps=0.06),\n",
+    "    PGD(model_wrap, eps=0.003, alpha=0.003, steps=20),\n",
+    "    #PGD(model_wrap, eps=0.03, alpha=0.003, steps=20),\n",
+    "    #PGD(model_wrap, eps=0.06, alpha=0.003, steps=20),\n",
+    "    CW(model_wrap, c=10, lr=0.003, steps=30),\n",
+    "    #CW(model_wrap, c=50, lr=0.003, steps=30),\n",
+    "]"
    ]
   },
   {
@@ -370,7 +366,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Original ViT"
+    "# Evaluate Original ViT"
    ]
   },
   {
@@ -387,21 +383,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Load model"
+    "## Load model\n",
+    "\n",
+    "We use pretrained model from: https://github.com/lukemelas/PyTorch-Pretrained-ViT"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loaded pretrained weights.\n",
-      "torch.Size([1, 3, 384, 384])\n",
-      "torch.Size([1, 1000])\n"
+      "Loaded pretrained weights.\n"
      ]
     }
    ],
@@ -420,35 +416,7 @@
     "    transforms.Resize((384, 384)), \n",
     "    transforms.ToTensor(),\n",
     "    transforms.Normalize(0.5, 0.5),\n",
-    "])\n",
-    "\n",
-    "img = transform(Image.open('/cluster/home/jrando/AADefDINO/data/ori_data/validation/images/ILSVRC2012_val_00000064.JPEG')).unsqueeze(0).to(DEVICE)\n",
-    "print(img.shape) # torch.Size([1, 3, 384, 384])\n",
-    "\n",
-    "# Classify\n",
-    "with torch.no_grad():\n",
-    "    outputs = vit_model(img)\n",
-    "print(outputs.shape)  # (1, 1000)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor(46, device='cuda:0')"
-      ]
-     },
-     "execution_count": 29,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "outputs.argmax()"
+    "])"
    ]
   },
   {
@@ -460,31 +428,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "3000"
-      ]
-     },
-     "execution_count": 30,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "BATCH_SIZE = 10\n",
-    "vit_loader = create_loader(ORI_IMAGES_PATH, ORI_LABEL_PATH, INDEX_SUBSET, None, BATCH_SIZE, is_adv_training=True, transform=transform)\n",
-    "len(vit_loader.dataset)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Attack model"
+    "vit_dataset = ImageDataset(ORI_IMAGES_PATH, ORI_LABEL_PATH, transform, class_subset=None, index_subset=INDEX_SUBSET)\n",
+    "vit_loader = DataLoader(vit_dataset, batch_size=BATCH_SIZE, num_workers=NUM_WORKERS, pin_memory=PIN_MEMORY, shuffle=True)"
    ]
   },
   {
@@ -493,27 +443,27 @@
     "tags": []
    },
    "source": [
-    "#### Compute clean accuracy"
+    "## Compute clean accuracy"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 300/300 [01:23<00:00,  3.61it/s]"
+      "100%|██████████| 300/300 [01:17<00:00,  3.85it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Total elapsed time (sec): 83.14\n",
-      "Clean accuracy: 83.47 %\n"
+      "Total elapsed time (sec): 77.93\n",
+      "Clean accuracy: 84.13 %\n"
      ]
     },
     {
@@ -545,6 +495,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Attack model\n",
+    "We use TorchAttack library. See: https://github.com/Harry24k/adversarial-attacks-pytorch"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 31,
    "metadata": {},
@@ -554,7 +512,7 @@
     "    #FGSM(vit_model, eps=0.003),\n",
     "    #FGSM(vit_model, eps=0.03),\n",
     "    #FGSM(vit_model, eps=0.06),\n",
-    "    #PGD(vit_model, eps=0.003, alpha=0.003, steps=20),\n",
+    "    PGD(vit_model, eps=0.003, alpha=0.003, steps=20),\n",
     "    #PGD(vit_model, eps=0.03, alpha=0.003, steps=20),\n",
     "    #PGD(vit_model, eps=0.06, alpha=0.003, steps=20),\n",
     "    CW(vit_model, c=10, lr=0.003, steps=30),\n",
@@ -641,7 +599,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Visualize images"
+    "# Visualize images\n",
+    "\n",
+    "In this section we visualize images used for the report."
    ]
   },
   {
@@ -1024,13 +984,6 @@
     "        \n",
     "        print(f\"Is adversarial? {correct==0}\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
